[package]
edition = "2021"
name = "veilid_news"
version = "0.0.1"
license = "MIT OR Apache-2.0"
description = "Rebroadcast feeds over veilid network"
keywords = ["veilid", "news",]
repository = "https://gitlab.com/veilid-news/veilid-news"
rust-version = "1.83.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
veilid-core = {version="0.3", default-features = false, features=["default-async-std"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
veilid-core = {version="0.3", default-features = false, features=["default-wasm"]}
veilid-wasm = {version = "0.1.0"}

[dependencies]
anyhow = "1.0.89"
async-std ="1.13.0"
chrono = "0.4.38"
clap = { version = "4.5.18", features = ["derive"] }
rand ="0.8.5"
reqwest = "0.12.7"
rss = "2.0"
serde = { version = "1.0.210", features= ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [ "env-filter" ] }
veilid_duplex = {version="0.2.2"}

[profile.test]
opt-level = 2
